--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,15 @@
 {
     "version": 2,
-    "functions": {
-        "server/server.js": {
-            "runtime": "nodejs18.x"
+    "builds": [
+        {
+            "src": "package.json",
+            "use": "@vercel/static-build"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "server/server.js"
+            "dest": "/index.html"
         }
     ]
 }
