--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build"
-        }
-    ],
+    "functions": {
+      "server.js": {
+        "runtime": "nodejs18.x"
+      }
+    },
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      }
     ]
-}
+  }
+  
